<!--<?xml version="1.0" encoding="UTF-8"?>-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.thierrysquirrel</groupId>
    <artifactId>sparrow-server-spring-boot</artifactId>
    <packaging>pom</packaging>
    <version>2.5.0.3-RELEASE</version>

    <name>sparrow-server-spring-boot</name>
    <description>sparrow-server-spring-boot</description>
    <url>https://github.com/ThierrySquirrel/sparrow-server-spring-boot</url>

    <modules>
        <module>sparrow-server-spring-boot-autoconfigure</module>
        <module>sparrow-server-spring-boot-common</module>
        <module>sparrow-server-spring-boot-starter</module>
    </modules>

    <properties>
        <java.version>25</java.version>
        <spring-boot-starter.version>4.0.6</spring-boot-starter.version>
        <ants.version>1.3.0.1-RELEASE</ants.version>
        <hummingbird.version>1.3.0.4-RELEASE</hummingbird.version>
        <maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
        <maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
        <maven-gpg-plugin.version>3.2.8</maven-gpg-plugin.version>
        <central-publishing-maven-plugin.version>0.10.0</central-publishing-maven-plugin.version>
    </properties>

    <dependencies>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-configuration-processor</artifactId>
                <version>${spring-boot-starter.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-jdbc</artifactId>
                <version>${spring-boot-starter.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-h2console</artifactId>
                <version>${spring-boot-starter.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.thierrysquirrel</groupId>
                <artifactId>ants</artifactId>
                <version>${ants.version}</version>
            </dependency>
            <dependency>
                <artifactId>hummingbird</artifactId>
                <groupId>io.github.thierrysquirrel</groupId>
                <version>${hummingbird.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.thierrysquirrel</groupId>
                <artifactId>sparrow-server-spring-boot-autoconfigure</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.thierrysquirrel</groupId>
                <artifactId>sparrow-server-spring-boot-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.thierrysquirrel</groupId>
                <artifactId>sparrow-server-spring-boot-starter</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>ThierrySquirrel</name>
            <email>2161271173@qq.com</email>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+8</timezone>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/ThierrySquirrel/sparrow-server-spring-boot.git</connection>
        <developerConnection>scm:git:https://github.com/ThierrySquirrel/sparrow-server-spring-boot.git
        </developerConnection>
        <url>https://github.com/ThierrySquirrel/sparrow-server-spring-boot</url>
        <tag>v${project.version}</tag>
    </scm>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin.version}</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>${maven-gpg-plugin.version}</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>${central-publishing-maven-plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>ossrh-staging-api</publishingServerId>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>